Prevent auto hiding URL bar on mobile

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -25,8 +25,7 @@
   background-color: var(--blue);
 }
 
-html,
-body {
+html {
   -webkit-touch-callout: none;
   -webkit-user-select: none;
   -khtml-user-select: none;
@@ -35,6 +34,19 @@ body {
   user-select: none;
   overscroll-behavior: contain;
   margin: 0;
+}
+
+/* Prevents auto hiding URL bar on mobile */
+body {
+  position: fixed;
+  margin: 0;
+  padding: 0;
+  border: 0;
+  outline: 0;
+  background: 0 0;
+  -webkit-overflow-scrolling: touch;
+  overflow-x: auto;
+  overflow-y: hidden;
 }
 
 div {
